--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -10,7 +10,64 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
       var DownloadDirectory;
-      document.addEventListener('deviceready', ondeviceready, false);
+      
+//       CORDOVA FILE UPLOAD AND DOWNLOAD FUNCTIONS AND EVENTS -->
+   document.getElementById("uploadFile").addEventListener("click", uploadFile);
+   document.getElementById("downloadFile").addEventListener("click", downloadFile);
+   function downloadFile() {
+   var fileTransfer = new FileTransfer();
+   var uri = encodeURI("http://s14.postimg.org/i8qvaxyup/bitcoin1.jpg");
+   var fileURL =  "///storage/emulated/0/DCIM/myFile";
+
+   fileTransfer.download(
+      uri, fileURL, function(entry) {
+         console.log("download complete: " + entry.toURL());
+      },
+		
+      function(error) {
+         console.log("download error source " + error.source);
+         console.log("download error target " + error.target);
+         console.log("download error code" + error.code);
+      },
+		
+      false, {
+         headers: {
+            "Authorization": "Basic dGVzdHVzZXJuYW1lOnRlc3RwYXNzd29yZA=="
+         }
+      }
+   );
+}
+function uploadFile() {
+   var fileURL = "///storage/emulated/0/DCIM/myFile"
+   var uri = encodeURI("http://posttestserver.com/post.php");
+   var options = new FileUploadOptions();
+   options.fileKey = "file";
+   options.fileName = fileURL.substr(fileURL.lastIndexOf('/')+1);
+   options.mimeType = "text/plain";
+   
+   var headers = {'headerParam':'headerValue'};
+   options.headers = headers;
+   var ft = new FileTransfer();
+   ft.upload(fileURL, uri, onSuccess, onError, options);
+
+   function onSuccess(r) {
+      console.log("Code = " + r.responseCode);
+      console.log("Response = " + r.response);
+      console.log("Sent = " + r.bytesSent);
+   }
+
+   function onError(error) {
+      alert("An error has occurred: Code = " + error.code);
+      console.log("upload error source " + error.source);
+      console.log("upload error target " + error.target);
+   }
+	
+}
+ 
+ //        CORDOVA FILE UPLOAD AND DOWNLOAD FUNCTIONS AND EVENTS -->
+ 
+ 
+  document.addEventListener('deviceready', ondeviceready, false);
       function ondeviceready() {
         window.requestFileSystem(
           localFileSystem.persistent0,
@@ -65,6 +122,8 @@
   <body>
     <input type="text" id="file_url" value="" />
     <input type="button" id="download_btn" value="download" />
+    <button id = "uploadFile">UPLOAD</button>
+<button id = "downloadFile">DOWNLOAD</button>
     <div id="message"></div>
   </body>
 </html>
